opam-version: "2.0"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Nuno Monteiro <anmonteiro@gmail.com>" ]
synopsis: "Websocket HTTP/AF Lwt"
description: "Websocket HTTP/AF Lwt"
license: "MIT"
homepage: "https://github.com/anmonteiro/websocket-httpaf"
dev-repo: "git+https://github.com/anmonteiro/websocket-httpaf.git"
bug-reports: "https://github.com/anmonteiro/websocket-httpaf/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" { >= "4.08.0"}
  "dune" {build & >= "1.7"}
  "logs"
  "lwt"
  "websocket-httpaf"
]
